<resources>
    <string name="app_name">MAC</string>

    <string name="root_temperature">%.0f</string>
    <string name="root_temperature_celsius">\u2103</string>
    <string name="root_temperature_for_selector">%d\u2103</string>
    <string name="root_apply">Применить</string>
    <string name="root_pressure">%d мм.рт.ст.</string>
    <string name="root_progress">Загрузка…</string>
    <string name="root_sync_error">Ошибка синхронизации. В топике нет сообщений</string>

    <string name="menu_bottom_cool">Охлаждение</string>
    <string name="menu_bottom_heat">Обогрев</string>
    <string name="menu_bottom_dry">Чистка</string>
    <string name="menu_bottom_fan">Вентилятор</string>
    <string name="menu_bottom_auto">Автоматический</string>

    <string name="fan_auto">Авто</string>
    <string name="fan_low">Минимум</string>
    <string name="fan_mid">Средний</string>
    <string name="fan_high">Максимум</string>
    <string name="fan_eco">Эко</string>
    <string name="fan_turbo">Турбо</string>

    <string name="preferences_mqtt">Mqtt брокер</string>
    <string name="preferences_mqtt_server">mqtt ip: port</string>
    <string name="preferences_mqtt_login">Логин</string>
    <string name="preferences_mqtt_pwd">Пароль</string>
    <string name="preferences_mqtt_client">Client ID</string>
    <string name="preferences_mqtt_topic"> Топик</string>

    <string name="setting_test_connection">Тест соединения</string>
    <string name="setting_apply">Применить</string>
    <string name="setting_demo_preset">Тестовые настройки</string>
    <string name="setting_sensor_state">Датчик температуры</string>

    <string name="progress_setting">К настройкам</string>

    <string name="not_connected_title">Соединение не установлено</string>
    <string name="not_connected_refresh">Подключиться</string>
    <string name="not_connected_setting">К настройкам</string>
    <string name="not_connected_progress">Подключаемся…</string>

    <string name="dev_fragment_dev">Dev</string>
    <string name="dev_fragment_prod">Prod</string>
</resources>