<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="server"
        app:title="@string/preferences_mqtt_server"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="login"
        app:title="@string/preferences_mqtt_login"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="pwd"
        app:title="@string/preferences_mqtt_pwd"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="clientId"
        app:title="@string/preferences_mqtt_client"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="topic"
        app:title="@string/preferences_mqtt_topic"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>