<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/fd_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/fd_dev"
            style="@style/MacText.Primary.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dev_fragment_dev" />

        <RadioButton
            android:id="@+id/fd_prod"
            style="@style/MacText.Primary.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dev_fragment_prod" />
    </RadioGroup>

    <Button
        android:id="@+id/fd_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/setting_apply"
        app:layout_constraintTop_toBottomOf="@id/fd_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>